Trying to fix scrolling issue on mobile when the header menu is open.

--- a/_assets_src/sass/base/_layout.scss
+++ b/_assets_src/sass/base/_layout.scss
@@ -38,11 +38,8 @@ html, body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 
   &[data-scroll="disabled"] { 
-    overflow-x: hidden !important;
-    overflow-y: hidden !important;
-    
-    ::-webkit-scrollbar { display: none; }
-    -webkit-overflow-scrolling: none !important;
+    overflow: hidden !important;
+    -webkit-overflow-scrolling: auto !important;
   }
 }
 
